--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,8 @@
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
+    "@suid/icons-material": "^0.8.1",
+    "@suid/material": "^0.18.0",
     "@tanstack/solid-query": "^5.67.1",
     "@tanstack/solid-query-devtools": "^5.67.1",
     "arktype": "^2.1.2",
@@ -53,6 +55,7 @@
     "@storybook/addon-interactions": "^8.6.3",
     "@storybook/blocks": "^8.6.3",
     "@storybook/test": "^8.6.3",
+    "@suid/vite-plugin": "^0.3.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/eslint-plugin-query": "^5.66.1",
