--- a/web/package.json
+++ b/web/package.json
@@ -57,6 +57,7 @@
     "@tanstack/eslint-plugin-query": "^5.66.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^9.14.0",
     "@vitest/browser": "^3.0.7",
