--- a/web/.prettierrc.yaml
+++ b/web/.prettierrc.yaml
@@ -1,11 +1,11 @@
 experimentalTernaries: true
 semi: false
 singleAttributePerLine: true
-overrides:
-  - files:
-      - "**/.{ts,tsx}"
-    options:
-      htmlWhitespaceSensitivity: ignore
-      plugins:
-        - prettier-plugin-tailwindcss
-        - "@trivago/prettier-plugin-sort-imports"
+importOrder:
+  - <THIRD_PARTY_MODULES>
+  - "^[../]"
+  - "^[./]"
+importOrderSeparation: true
+plugins:
+  - prettier-plugin-tailwindcss
+  - "@trivago/prettier-plugin-sort-imports"
