--- a/web/package.json
+++ b/web/package.json
@@ -24,12 +24,12 @@
     "@solid-primitives/destructure": "^0.1.17",
     "@solid-primitives/i18n": "^2.2.0",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.3",
     "@suid/icons-material": "^0.8.1",
     "@suid/material": "^0.18.0",
     "@tanstack/solid-query": "^5.67.1",
     "@tanstack/solid-query-devtools": "^5.67.1",
+    "@tanstack/solid-router": "^1.114.23",
     "arktype": "^2.1.2",
     "daisyui": "^5.0.0",
     "dayjs": "^1.11.13",
@@ -55,6 +55,8 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/eslint-plugin-query": "^5.66.1",
+    "@tanstack/router-plugin": "^1.114.23",
+    "@tanstack/solid-router-devtools": "^1.114.23",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
