--- a/web/.vscode/settings.json
+++ b/web/.vscode/settings.json
@@ -2,7 +2,14 @@
   "files.exclude": {
     ".eslintcache": true
   },
+  // formatter
+  "[json][jsonc][typescript][typescriptreact]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    // Prettier will insert new line so we don't
+    "files.insertFinalNewline": false
+  },
   "typescript.preferences.importModuleSpecifierEnding": "minimal",
+
   // tailwind
   "tailwindCSS.classAttributes": ["class", "class:list", "twMerge"],
   "tailwindCSS.experimental.classRegex": [
