--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -106,7 +106,7 @@ tokio.workspace = true
 tower = { version = "0.5.2", features = [
     "limit",
 ] }
-tower-http = { version = "0.6.2", features = [ "fs", "trace" ] }
+tower-http = { version = "0.6.2", features = [ "fs", "trace", "cors" ] }
 tower-sessions-redis-store = "0.16.0"
 tower_governor = "0.6.0"
 tracing.workspace = true
